// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VncActions VncActions renders correctly component hierarchy 1`] = `
<DocumentFragment>
  <div
    class="pf-c-console__actions-vnc"
  >
    <div
      class="pf-c-dropdown"
      data-ouia-component-id="OUIA-Generated-Dropdown-2"
      data-ouia-component-type="PF4/Dropdown"
      data-ouia-safe="true"
      id="pf-c-console__send-shortcut"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="pf-c-dropdown__toggle"
        data-ouia-component-id="OUIA-Generated-DropdownToggle-2"
        data-ouia-component-type="PF4/DropdownToggle"
        data-ouia-safe="true"
        id="pf-c-console__actions-vnc-toggle-id"
        type="button"
      >
        <span
          class="pf-c-dropdown__toggle-text"
        >
          My Send Shortcut description
        </span>
        <span
          class="pf-c-dropdown__toggle-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </button>
    </div>
    <button
      aria-disabled="false"
      class="pf-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-2"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe="true"
      type="button"
    >
      Disconnect
    </button>
  </div>
</DocumentFragment>
`;

exports[`VncActions VncActions renders correctly html 1`] = `
<DocumentFragment>
  <div
    class="pf-c-console__actions-vnc"
  >
    <div
      class="pf-c-dropdown"
      data-ouia-component-id="OUIA-Generated-Dropdown-3"
      data-ouia-component-type="PF4/Dropdown"
      data-ouia-safe="true"
      id="pf-c-console__send-shortcut"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="pf-c-dropdown__toggle"
        data-ouia-component-id="OUIA-Generated-DropdownToggle-3"
        data-ouia-component-type="PF4/DropdownToggle"
        data-ouia-safe="true"
        id="pf-c-console__actions-vnc-toggle-id"
        type="button"
      >
        <span
          class="pf-c-dropdown__toggle-text"
        >
          My Send Shortcut description
        </span>
        <span
          class="pf-c-dropdown__toggle-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </button>
    </div>
    <button
      aria-disabled="false"
      class="pf-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-3"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe="true"
      type="button"
    >
      Disconnect
    </button>
  </div>
</DocumentFragment>
`;

exports[`VncActions placeholder render test 1`] = `
<DocumentFragment>
  <div
    class="pf-c-console__actions-vnc"
  >
    <div
      class="pf-c-dropdown"
      data-ouia-component-id="OUIA-Generated-Dropdown-1"
      data-ouia-component-type="PF4/Dropdown"
      data-ouia-safe="true"
      id="pf-c-console__send-shortcut"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="pf-c-dropdown__toggle"
        data-ouia-component-id="OUIA-Generated-DropdownToggle-1"
        data-ouia-component-type="PF4/DropdownToggle"
        data-ouia-safe="true"
        id="pf-c-console__actions-vnc-toggle-id"
        type="button"
      >
        <span
          class="pf-c-dropdown__toggle-text"
        >
          Send Key
        </span>
        <span
          class="pf-c-dropdown__toggle-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </button>
    </div>
    <button
      aria-disabled="false"
      class="pf-c-button pf-m-secondary"
      data-ouia-component-id="OUIA-Generated-Button-secondary-1"
      data-ouia-component-type="PF4/Button"
      data-ouia-safe="true"
      type="button"
    >
      Disconnect
    </button>
  </div>
</DocumentFragment>
`;
